--- a/20240705/translate.html
+++ b/20240705/translate.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>변환 transform: translate</title><!--p246-->
     <style>
-        .origin{
+        .origin {
             border: 1px solid;
-            width:250px;
+            width: 250px;
         }
-        .moveX:hover{
-            transform: translateX(50px); /*x축 방향으로 50px만큼 이동*/
+
+        .moveX:hover {
+            transform: translateX(50px);
+            /*x축 방향으로 50px만큼 이동*/
         }
-        .moveY:hover{
+
+        .moveY:hover {
             transform: translateY(50px);
         }
-        .moveXY:hover{
-            transform: translate(50px,20px);/*x축으로 50px, y축으로 20px -> 오른쪽 아래로*/
-            
+
+        .moveXY:hover {
+            transform: translate(50px, 20px);
+            /*x축으로 50px, y축으로 20px -> 오른쪽 아래로*/
+
         }
     </style>
 </head>
+
 <body>
     <h2>변환 transform 트랜스폼</h2>
     <p>
-        특정 요소의 크기나 형태가 변하는 것을 변형(변환) 또는 transform이라고 한다. 
-        사용자의 동작에 반응해서 텍스트나 이미지 등을 움직이게 할 수 있다. 
-        2차원(x,y) , 3차원(x,y,z) : 원근감의 표현 
+        특정 요소의 크기나 형태가 변하는 것을 변형(변환) 또는 transform이라고 한다.
+        사용자의 동작에 반응해서 텍스트나 이미지 등을 움직이게 할 수 있다.
+        2차원(x,y) , 3차원(x,y,z) : 원근감의 표현
         z축 앞뒤로 이동하는데 가까워지고 멀어진다.
     </p>
     <div class="origin">
@@ -39,4 +46,5 @@
         <div class="moveXY"><img src="../images/youtube.png" alt="" width="200px"></div>
     </div>
 </body>
+
 </html>
