주석 부분 수정:   20240708/No3.html

--- a/20240708/No3.html
+++ b/20240708/No3.html
@@ -16,8 +16,9 @@
             border: 2px solid blue;
             /*position: relative;*/
             display: flex;
-            justify-content: center; /*position으로 하는 대신 부모요소에서 [justify-content와 align-items를 동시에 사용]*/
-            align-items: center;
+            justify-content: center;/*좌우 관계 정렬*/
+             /*position으로 하는 대신 부모요소에서 [justify-content와 align-items를 동시에 사용]*/
+            align-items: center;/*상하 관계 정렬*/
         }
         .small-box{
             width: 100px;
