코드추가:   20240705/transition.html 	코드수정:   20240705/translate.html

--- a/20240705/translate.html
+++ b/20240705/translate.html
@@ -29,12 +29,18 @@
 </head>
 
 <body>
-    <h2>변환 transform 트랜스폼</h2>
+    <h2>246쪽 변환 transform :translate 트랜스폼</h2>
     <p>
         특정 요소의 크기나 형태가 변하는 것을 변형(변환) 또는 transform이라고 한다.
         사용자의 동작에 반응해서 텍스트나 이미지 등을 움직이게 할 수 있다.
         2차원(x,y) , 3차원(x,y,z) : 원근감의 표현
         z축 앞뒤로 이동하는데 가까워지고 멀어진다.
+        <br>
+        위치이동 translate
+        확대/축소 scale 
+        회전 rotate
+        기울임 skew
+
     </p>
     <div class="origin">
         <div class="moveX"><img src="../images/youtube.png" alt="" width="200px"></div>
