--- a/20240705/transition.html
+++ b/20240705/transition.html
@@ -23,7 +23,12 @@
             margin:100px;
             background-color: orange;
             border: 1px solid;
-        
+            transition:2s ease-in-out;
+        }
+        .box2:hover{
+            width: 250px;
+            height: 250px;
+            background-color: orangered;
         }
     </style>
 </head>
@@ -31,12 +36,20 @@
     <h2>트랜지션 전환 244쪽</h2>
     <p>
         웹 요소인 배경색이 바뀌거나
-        도형의 테두리가 원형으로 바뀌는 등 스타일 속성이 바뀌는 것을 맗합니다.
+        도형의 테두리가 원형으로 바뀌는 등 <mark>스타일 속성</mark>이 바뀌는 것을 맗합니다.
+        <br>
+        값의 변화를 서서히 진행시켜 <mark>애니메이션 효과</mark>를 내는 것이며 <mark>1회만</mark>이루어진다.
     </p>
     <div class="box1">box
     </div>
-    <div class="box2">box
-
+    <div class="box2">box</div>
+    
+    <h2>transition-timing-function 속도 곡선 속성 값</h2>
+    <div id="ex">
+        <div class="ease">ease 기본값</div>
+        <div class="linear">linear</div>
+        <div class="ease-in">ease-in</div>
+        <div class="ease-in-out">ease-in-out</div>
     </div>
 </body>
 </html>
