modified:   20240708/animation02.html 	new file:   20240708/animation03-02.html 	new file:   20240708/animation03.html 	new file:   20240708/overflow.html

--- a/20240708/animation02.html
+++ b/20240708/animation02.html
@@ -41,7 +41,8 @@
             right: 5%;
             animation: moveIn 2s ease-out;
         }
-        @keyframes moveIn{ /*글자들을 오른쪽에서 왼쪽으로 이동할 수 있게 애니메이션 효과를 만듦*/
+        /*글자들을 오른쪽에서 왼쪽으로 이동할 수 있게 애니메이션 효과를 만듦*/
+        @keyframes moveIn{ 
             from{
                 right:-10%;
                 opacity: 0;/*opacity: 투명도*/
@@ -50,7 +51,8 @@
                 opacity: 0.8;
             }
         }
-        @keyframes moveRight{ /*배경 이미지를 좌측에서 우측으로 이동할 수 있게 애니메이션 효과를 만들었음*/
+        /*배경 이미지를 좌측에서 우측으로 이동할 수 있게 애니메이션 효과를 만들었음*/
+        @keyframes moveRight{ 
             from{
                 left:-10%;
             }to{
