MediaQuerry응용:   20240708/blueBottleMedia.html 	기존 CSS:   20240708/bottledrop.css

--- a/20240708/blueBottleMedia.html
+++ b/20240708/blueBottleMedia.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="bottledrop.css">
     <script src="https://kit.fontawesome.com/4ec79785b5.js" crossorigin="anonymous"></script>
     <style>
-        
-        @media screen and (max-width:768px){
-            header{
+        /*미디어쿼리 응용해보기 -> 화면이 줄었을 때 헤더 부분 색깔 변경 + List 글자 크기 변경*/
+        @media screen and (max-width:768px) {
+            header {
                 background-color: antiquewhite;
             }
-            div.cafes{
+
+            div.cafes {
                 font-size: 25px;
-                
+
             }
-            div.company{
-                font-size:25px;
+
+            div.company {
+                font-size: 25px;
             }
-            div.menu{
-                font-size:25px;
+
+            div.menu {
+                font-size: 25px;
             }
         }
     </style>
