modified:   20240708/JavaScript.txt 	new file:   20240708/averageScore.html 	modified:   20240708/ex05-12.html 	modified:   20240708/ex05-13.html 	modified:   20240708/ex05-14.html 	new file:   20240708/ex08-2.html 	new file:   20240708/p242.html 	new file:   20240708/p255-6(2).html 	new file:   20240708/p255-6.html 	new file:   20240708/p255-7.html 	new file:   20240708/p255-8.html

--- a/20240708/ex05-14.html
+++ b/20240708/ex05-14.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>247쪽 예제</title>
     <style>
-        div{
+        div {
             display: inline-block;
-            padding:5px;
-            color:white;
+            padding: 5px;
+            color: white;
             background-color: olivedrab;
         }
-        .rotate{
+
+        .rotate {
             transform: rotate(20deg);
         }
-        .rotate:hover{
+
+        .rotate:hover {
             cursor: pointer;
             transform: rotate(80deg);
         }
-        .skew{
-            transform: skew(0,-20deg);
+
+        .skew {
+            transform: skew(0, -20deg);
         }
-        .skew:hover{
+
+        .skew:hover {
             cursor: pointer;
-            transform: skew(0,-60deg);
+            transform: skew(0, -60deg);
         }
-        .translate{
+
+        .translate {
             transform: translateY(100px);
         }
-        .translate:hover{
+
+        .translate:hover {
             cursor: pointer;
-            transform: translate(50px,100px);
+            transform: translate(50px, 100px);
         }
-        .scale{
-            transform: scale(3,1);
+
+        .scale {
+            transform: scale(3, 1);
         }
-        .scale:hover{
+
+        .scale:hover {
             cursor: pointer;
-            transform: scale(1,5);
+            transform: scale(1, 5);
         }
     </style>
 </head>
+
 <body>
     <h3>다양한 Transform</h3>
     아래는 회전(rotate), 기울임(skew), 이동(translate), 확대/축소(scale)가 적용된 사례이다. 또한 마우스를 올리면 추가적 변환이 일어난다.
@@ -50,4 +60,5 @@
     <div class="translate">translateY(100px)</div>
     <div class="scale">scale(3,1)</div>
 </body>
+
 </html>
