--- a/20240708/ex08-2.html
+++ b/20240708/ex08-2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>363쪽 예제</title>
     <script>
+        //Q. 스타일변경 버튼을 눌렀을 때, "문장입니다." 부분의 스타일 변경.
         function change() {
             let span = document.getElementById("mySpan");
             span.style.color = "green";
