modified:   20240708/Basic.html 	new file:   20240709/clickPictureEvent.html 	new file:   20240709/innerHtml.html 	new file:   "20240709/\352\265\254\352\265\254\353\213\250.html"

--- a/20240708/Basic.html
+++ b/20240708/Basic.html
@@ -111,7 +111,7 @@
             str += "<tr>";
             str += "<td>1</td>";
             str += "<td>2</td>";
-            str += "<td>3</td></tr>";
+            str += "<td>3</td></tr></table>";
             document.write(str);
 
         //비교연산자 
