--- a/20240709/p303_challenge06.html
+++ b/20240709/p303_challenge06.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>별찍기 프로그램</title>
+    <script>
+        function printStar(n){
+        let num = parseInt(n);
+        //소수 조건 넣지 못함.
+        if(isNaN(n) || (num < 0)){
+            alert("올바른 숫자를 입력해주세요.");
+            document.write("<h2>입력 오류 입니다</h2>");
+        }else{
+            for(let i = 1; i <= num ; i++ ){
+                for(let j = 1; j <= i; j++){
+                    document.write("*");
+                }   
+                document.write("<br>");
+            }
+        }
+    }
+    </script>
 </head>
 <body>
     <h1>별 문자 출력하기</h1>
     <hr>
     <script>
-        prompt("정수를 입력하세요: ");
+        let n = prompt("정수를 입력하세요.");
+        printStar(n);
     </script>
+    
 </body>
 </html>
