--- a/20240709/구구단.html
+++ b/20240709/구구단.html
@@ -5,24 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구구단 만들어보기</title>
-    <script>
-        function math(n) {
-            let num = parseInt(n)
-            for (let j = 1; j <= 9; j++) {
-                sum = num * j;
-                document.write(num + "x" + j + "=" + sum + "<br>");
-            }
-        }
-
-    </script>
 </head>
-
 <body>
-    <h1>구구단 출력하기</h1>
+    <h1>구구단 출력 함수 만들기</h1>
     <hr>
     <script>
         let n = prompt("원하는 구구단을 입력하세요.");
         math(n);
+        
+
+        function math(n) {
+            let num = parseInt(n);
+            if ((num < 0) || (num > 9)) {
+                alert("잘못된 숫자를 입력하셨습니다.");
+                return;
+            }
+            for (let i = 1; i <= 9; i++) {
+                sum = num * i;
+                document.write(num + "x" + i + "=" + sum + "<br>");
+            }
+            
+        }
     </script>
 
 </body>
