--- a/20240709/구구단.html
+++ b/20240709/구구단.html
@@ -18,13 +18,16 @@
             let num = parseInt(n);
             if ((num < 0) || (num > 9)) {
                 alert("잘못된 숫자를 입력하셨습니다.");
+                document.write("프로그램을 재실행 해주세요.");
                 return;
-            }
+            }else{
+                document.write(n + "단<br>");
             for (let i = 1; i <= 9; i++) {
                 sum = num * i;
                 document.write(num + "x" + i + "=" + sum + "<br>");
             }
             
+        }
         }
     </script>
 
