--- a/20240709/구구단.html
+++ b/20240709/구구단.html
@@ -6,28 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구구단 만들어보기</title>
 </head>
+
 <body>
     <h1>구구단 출력 함수 만들기</h1>
     <hr>
     <script>
         let n = prompt("원하는 구구단을 입력하세요.");
         math(n);
-        
+
 
         function math(n) {
             let num = parseInt(n);
+            //문자열 입력시, NAN (Not A Number) 
             if ((num < 0) || (num > 9)) {
                 alert("잘못된 숫자를 입력하셨습니다.");
                 document.write("프로그램을 재실행 해주세요.");
                 return;
-            }else{
+            } else {
                 document.write(n + "단<br>");
-            for (let i = 1; i <= 9; i++) {
-                sum = num * i;
-                document.write(num + "x" + i + "=" + sum + "<br>");
+                for (let i = 1; i <= 9; i++) {
+                    sum = num * i;
+                    document.write(num + " x " + i + " = " + sum + "<br>");
+                }
+
             }
-            
-        }
         }
     </script>
 
