new file:   20240710/bulb.html 	new file:   20240710/date.html 	new file:   20240710/modal.html 	new file:   "20240710/\354\232\224\354\206\214\354\204\240\355\203\235.html" 	new file:   "20240710/\354\232\224\354\206\214\354\204\240\355\203\2352.html" 	new file:   images/bulb.jpg

--- a/20240705/translate.html
+++ b/20240705/translate.html
@@ -17,7 +17,7 @@
         }
 
         .moveY:hover {
-            transform: translateY(50px);
+            transform: translateY(5 0px);
         }
 
         .moveXY:hover {
