--- a/20240710/요소선택2.html
+++ b/20240710/요소선택2.html
@@ -35,8 +35,8 @@
         //제일 가까운 상위 부모 요소 선택하기.
         console.log(li.closest("ul"));
         //형제 요소 선택하기.
-        console.log(item3.previousElementSibling); //이전 형제 요소
-        console.log(item3.nextElementSibling); //다음 형제 요소
+        console.log(item3.previousElementSibling); //이전 형제 요소 -> item2
+        console.log(item3.nextElementSibling); //다음 형제 요소 -> item4
         
     </script>
 </body>
