new file:   20240712/20240712.txt 	new file:   20240712/AlarmMessage.html 	new file:   20240712/LocalStorage.html 	new file:   20240712/TimeImage.html 	CSS 수정:   20240712/TotalPrice.html 	new file:   20240712/changeClickColor.html 	CSS 수정:   20240712/itemDiscount.html

--- a/20240712/TotalPrice.html
+++ b/20240712/TotalPrice.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구성품의 총 가격 구하고 삭제하는 페이지</title>
     <style>
+        body{
+            background-color: rgba(245, 245, 220, 0.471);
+            display: flex;
+            width:100%;
+            justify-content: center;
+            align-items: center;
+        }
         #container{
+            margin-top: 50px;
             width: 800px;
             background-color: rgb(254, 244, 231);
-            
+            box-shadow: -2px 2px 5px 10px lightgray;
         }   
         h2{
             color:brown;
